--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.25.7",
     "@tailwindcss/typography": "^0.5.10",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -26,6 +27,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-plugin-n": "^16.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
